Prior Knowledge + MetalinksDB

--- a/docs/source/notebooks/basic_usage.ipynb
+++ b/docs/source/notebooks/basic_usage.ipynb
@@ -487,85 +487,21 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "d0a1f836-2160-40f0-b7b1-14b49592d71d",
-   "metadata": {},
-   "source": [
-    "#### Resources"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "4e42cdf9-7bda-468a-9c4e-edbfda6ac5ea",
-   "metadata": {},
-   "source": [
-    "To provide ligand-receptor predictions `liana` relies on prior-knowledge and makes use of the following ligand-receptor resources:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "3d0409b3-93e5-400d-aea2-8ae7bd5ebb18",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['baccin2019',\n",
-       " 'cellcall',\n",
-       " 'cellchatdb',\n",
-       " 'cellinker',\n",
-       " 'cellphonedb',\n",
-       " 'celltalkdb',\n",
-       " 'connectomedb2020',\n",
-       " 'consensus',\n",
-       " 'embrace',\n",
-       " 'guide2pharma',\n",
-       " 'hpmr',\n",
-       " 'icellnet',\n",
-       " 'italk',\n",
-       " 'kirouac2010',\n",
-       " 'lrdb',\n",
-       " 'mouseconsensus',\n",
-       " 'ramilowski2015']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "li.resource.show_resources()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "f5b72366-7a1a-435e-9d94-8758f1c732e3",
-   "metadata": {},
-   "source": [
-    "These were pre-generated using the [OmniPath](https://github.com/saezlab/omnipath) meta-database, but any custom resource can also be passed.\n",
-    "We refer the user to [OmniPath](https://github.com/saezlab/omnipath) as a useful tool to build any resource."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "7d529a44-8be9-4379-b79c-b2751562bb93",
-   "metadata": {},
-   "source": [
-    "    \n",
-    "By default, `liana` uses the `consensus` resource, which is composed by multiple expert-curated ligand-receptor resources, including CellPhoneDB, CellChat, ICELLNET, connectomeDB2020, and CellTalkDB.\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
    "id": "6ef44f96-b2d5-489d-b66e-581a97800766",
    "metadata": {},
    "source": [
     "## Example Run"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "\n",
+    "By default, LIANA+ uses **human** gene symbols. Though any other gene identifiers can be used. See the documentation and the Prior Knowledge tutorial for details.\n",
+    "    \n",
+    "</div>  "
    ]
   },
   {
