--- a/docs/source/notebooks/prior_knowledge.ipynb
+++ b/docs/source/notebooks/prior_knowledge.ipynb
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1204,7 @@
        " 'Schizophrenia']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1255,53 +1255,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>\"Dopamine\"</td>\n",
-       "      <td>\"HMDB0000073\"</td>\n",
-       "      <td>\"A5X5Y0\"</td>\n",
-       "      <td>\"HTR3E\"</td>\n",
+       "      <td>Dopamine</td>\n",
+       "      <td>HMDB0000073</td>\n",
+       "      <td>A5X5Y0</td>\n",
+       "      <td>HTR3E</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>\"Dopamine\"</td>\n",
-       "      <td>\"HMDB0000073\"</td>\n",
-       "      <td>\"O95264\"</td>\n",
-       "      <td>\"HTR3B\"</td>\n",
+       "      <td>Dopamine</td>\n",
+       "      <td>HMDB0000073</td>\n",
+       "      <td>O95264</td>\n",
+       "      <td>HTR3B</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>\"Dopamine\"</td>\n",
-       "      <td>\"HMDB0000073\"</td>\n",
-       "      <td>\"P08908\"</td>\n",
-       "      <td>\"HTR1A\"</td>\n",
+       "      <td>Dopamine</td>\n",
+       "      <td>HMDB0000073</td>\n",
+       "      <td>P08908</td>\n",
+       "      <td>HTR1A</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>\"Dopamine\"</td>\n",
-       "      <td>\"HMDB0000073\"</td>\n",
-       "      <td>\"P14416\"</td>\n",
-       "      <td>\"DRD2\"</td>\n",
+       "      <td>Dopamine</td>\n",
+       "      <td>HMDB0000073</td>\n",
+       "      <td>P14416</td>\n",
+       "      <td>DRD2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>\"Dopamine\"</td>\n",
-       "      <td>\"HMDB0000073\"</td>\n",
-       "      <td>\"P21728\"</td>\n",
-       "      <td>\"DRD1\"</td>\n",
+       "      <td>Dopamine</td>\n",
+       "      <td>HMDB0000073</td>\n",
+       "      <td>P21728</td>\n",
+       "      <td>DRD1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   metabolite           hmdb   uniprot gene_symbol\n",
-       "0  \"Dopamine\"  \"HMDB0000073\"  \"A5X5Y0\"     \"HTR3E\"\n",
-       "1  \"Dopamine\"  \"HMDB0000073\"  \"O95264\"     \"HTR3B\"\n",
-       "2  \"Dopamine\"  \"HMDB0000073\"  \"P08908\"     \"HTR1A\"\n",
-       "3  \"Dopamine\"  \"HMDB0000073\"  \"P14416\"      \"DRD2\"\n",
-       "4  \"Dopamine\"  \"HMDB0000073\"  \"P21728\"      \"DRD1\""
+       "  metabolite         hmdb uniprot gene_symbol\n",
+       "0   Dopamine  HMDB0000073  A5X5Y0       HTR3E\n",
+       "1   Dopamine  HMDB0000073  O95264       HTR3B\n",
+       "2   Dopamine  HMDB0000073  P08908       HTR1A\n",
+       "3   Dopamine  HMDB0000073  P14416        DRD2\n",
+       "4   Dopamine  HMDB0000073  P21728        DRD1"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1431,8 +1431,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
