add sma tutorial

--- a/docs/source/notebooks/prior_knowledge.ipynb
+++ b/docs/source/notebooks/prior_knowledge.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "LIANA+ typically relies heavily on prior knowledge to infer intercellular communication, as well as the intracellular signaling pathways that are activated in response to the communication. This notebook will provide a brief overview of the prior knowledge that is used in LIANA+. "
+    "LIANA+ typically relies heavily on prior knowledge to infer intercellular communication and the intracellular signaling pathways that are activated in response to communication. This notebook provides a brief overview of the prior knowledge typically used by LIANA+. "
    ]
   },
   {
@@ -181,7 +181,7 @@
    "source": [
     "All of these resources were pre-generated using the [OmniPath](https://github.com/saezlab/omnipath) meta-database. Though any custom resource can also be passed, including those provided by the user or generated using the `omnipath` client package. \n",
     "\n",
-    "Via the client, in addition to ligand-receptor interactions, users can obtain the PubMed IDs of the references that support each interaction, as well as the database that reported the interaction in the first place. \n",
+    "Via this client, in addition to ligand-receptor interactions, users can obtain the PubMed IDs of the references (`references`) that were used support each interaction, as well as the database that reported the interaction in the first place. \n",
     "\n",
     "Users can also modify the resource according to their preferences, for example:"
    ]
@@ -214,6 +214,7 @@
        "      <th></th>\n",
        "      <th>ligand</th>\n",
        "      <th>receptor</th>\n",
+       "      <th>references</th>\n",
        "      <th>source</th>\n",
        "      <th>target</th>\n",
        "      <th>is_stimulation</th>\n",
@@ -221,7 +222,6 @@
        "      <th>consensus_direction</th>\n",
        "      <th>consensus_stimulation</th>\n",
        "      <th>consensus_inhibition</th>\n",
-       "      <th>curation_effort</th>\n",
        "      <th>...</th>\n",
        "      <th>aspect_intercell_target</th>\n",
        "      <th>category_source_intercell_target</th>\n",
@@ -240,6 +240,7 @@
        "      <th>0</th>\n",
        "      <td>LCK</td>\n",
        "      <td>CTLA4</td>\n",
+       "      <td>ProtMapper:9973379;SIGNOR:9973379;SPIKE:939833...</td>\n",
        "      <td>P06239</td>\n",
        "      <td>P16410</td>\n",
        "      <td>True</td>\n",
@@ -247,7 +248,6 @@
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>12</td>\n",
        "      <td>...</td>\n",
        "      <td>functional</td>\n",
        "      <td>resource_specific</td>\n",
@@ -264,6 +264,7 @@
        "      <th>1</th>\n",
        "      <td>CD86</td>\n",
        "      <td>CTLA4</td>\n",
+       "      <td>BioGRID:11279501;CellChatDB:23954143;CellTalkD...</td>\n",
        "      <td>P42081</td>\n",
        "      <td>P16410</td>\n",
        "      <td>True</td>\n",
@@ -271,7 +272,6 @@
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>28</td>\n",
        "      <td>...</td>\n",
        "      <td>functional</td>\n",
        "      <td>resource_specific</td>\n",
@@ -288,6 +288,7 @@
        "      <th>2</th>\n",
        "      <td>CD80</td>\n",
        "      <td>CTLA4</td>\n",
+       "      <td>BioGRID:11279502;CellChatDB:23954143;ICELLNET:...</td>\n",
        "      <td>P33681</td>\n",
        "      <td>P16410</td>\n",
        "      <td>True</td>\n",
@@ -295,7 +296,6 @@
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>22</td>\n",
        "      <td>...</td>\n",
        "      <td>functional</td>\n",
        "      <td>resource_specific</td>\n",
@@ -312,6 +312,7 @@
        "      <th>3</th>\n",
        "      <td>ICOSLG</td>\n",
        "      <td>CTLA4</td>\n",
+       "      <td>ICELLNET:21530327;connectomeDB2020:21530327</td>\n",
        "      <td>O75144</td>\n",
        "      <td>P16410</td>\n",
        "      <td>False</td>\n",
@@ -319,7 +320,6 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>3</td>\n",
        "      <td>...</td>\n",
        "      <td>functional</td>\n",
        "      <td>resource_specific</td>\n",
@@ -336,6 +336,7 @@
        "      <th>4</th>\n",
        "      <td>LCK</td>\n",
        "      <td>CD8A</td>\n",
+       "      <td>NetPath:8814252;SPIKE:16818755;SPIKE_LC:16818755</td>\n",
        "      <td>P06239</td>\n",
        "      <td>P01732</td>\n",
        "      <td>False</td>\n",
@@ -343,7 +344,6 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>4</td>\n",
        "      <td>...</td>\n",
        "      <td>functional</td>\n",
        "      <td>resource_specific</td>\n",
@@ -362,26 +362,26 @@
        "</div>"
       ],
       "text/plain": [
-       "   ligand receptor  source  target  is_stimulation  is_inhibition  \\\n",
-       "0     LCK    CTLA4  P06239  P16410            True           True   \n",
-       "1    CD86    CTLA4  P42081  P16410            True          False   \n",
-       "2    CD80    CTLA4  P33681  P16410            True          False   \n",
-       "3  ICOSLG    CTLA4  O75144  P16410           False          False   \n",
-       "4     LCK     CD8A  P06239  P01732           False          False   \n",
+       "   ligand receptor                                         references  source  \\\n",
+       "0     LCK    CTLA4  ProtMapper:9973379;SIGNOR:9973379;SPIKE:939833...  P06239   \n",
+       "1    CD86    CTLA4  BioGRID:11279501;CellChatDB:23954143;CellTalkD...  P42081   \n",
+       "2    CD80    CTLA4  BioGRID:11279502;CellChatDB:23954143;ICELLNET:...  P33681   \n",
+       "3  ICOSLG    CTLA4        ICELLNET:21530327;connectomeDB2020:21530327  O75144   \n",
+       "4     LCK     CD8A   NetPath:8814252;SPIKE:16818755;SPIKE_LC:16818755  P06239   \n",
        "\n",
-       "   consensus_direction  consensus_stimulation  consensus_inhibition  \\\n",
-       "0                 True                  False                  True   \n",
-       "1                 True                   True                 False   \n",
-       "2                 True                   True                 False   \n",
-       "3                False                  False                 False   \n",
-       "4                False                  False                 False   \n",
+       "   target  is_stimulation  is_inhibition  consensus_direction  \\\n",
+       "0  P16410            True           True                 True   \n",
+       "1  P16410            True          False                 True   \n",
+       "2  P16410            True          False                 True   \n",
+       "3  P16410           False          False                False   \n",
+       "4  P01732           False          False                False   \n",
        "\n",
-       "   curation_effort  ... aspect_intercell_target  \\\n",
-       "0               12  ...              functional   \n",
-       "1               28  ...              functional   \n",
-       "2               22  ...              functional   \n",
-       "3                3  ...              functional   \n",
-       "4                4  ...              functional   \n",
+       "   consensus_stimulation  consensus_inhibition  ...  aspect_intercell_target  \\\n",
+       "0                  False                  True  ...               functional   \n",
+       "1                   True                 False  ...               functional   \n",
+       "2                   True                 False  ...               functional   \n",
+       "3                  False                 False  ...               functional   \n",
+       "4                  False                 False  ...               functional   \n",
        "\n",
        "  category_source_intercell_target uniprot_intercell_target  \\\n",
        "0                resource_specific                   P16410   \n",
@@ -435,7 +435,7 @@
     "ligrec.head()\n",
     "\n",
     "ligrec = ligrec.rename(columns={'genesymbol_intercell_source':'ligand', 'genesymbol_intercell_target':'receptor'})\n",
-    "ligrec = ligrec[['ligand', 'receptor'] + [col for col in ligrec.columns if col not in ['ligand', 'receptor']]]\n",
+    "ligrec = ligrec[['ligand', 'receptor', 'references'] + [col for col in ligrec.columns if col not in ['ligand', 'receptor', 'references']]]\n",
     "ligrec.head()"
    ]
   },
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -728,32 +728,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Obesity</td>\n",
-       "      <td>AGRP^SDC3</td>\n",
+       "      <th>693653</th>\n",
+       "      <td>Hypertensive disease</td>\n",
+       "      <td>ACE^AGTR2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Colorectal Carcinoma</td>\n",
-       "      <td>MMRN2^CD248</td>\n",
+       "      <th>693926</th>\n",
+       "      <td>Malignant neoplasm of stomach</td>\n",
+       "      <td>ACE^AGTR2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Colorectal Carcinoma</td>\n",
-       "      <td>MMRN2^CD93</td>\n",
+       "      <th>693991</th>\n",
+       "      <td>Neoplasm Metastasis</td>\n",
+       "      <td>ACE^AGTR2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>694293</th>\n",
+       "      <td>Stomach Neoplasms</td>\n",
+       "      <td>ACE^AGTR2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>693759</th>\n",
+       "      <td>Left Ventricular Hypertrophy</td>\n",
+       "      <td>ACE^AGTR2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 disease  interaction\n",
-       "9                Obesity    AGRP^SDC3\n",
-       "20  Colorectal Carcinoma  MMRN2^CD248\n",
-       "21  Colorectal Carcinoma   MMRN2^CD93"
+       "                              disease interaction\n",
+       "693653           Hypertensive disease   ACE^AGTR2\n",
+       "693926  Malignant neoplasm of stomach   ACE^AGTR2\n",
+       "693991            Neoplasm Metastasis   ACE^AGTR2\n",
+       "694293              Stomach Neoplasms   ACE^AGTR2\n",
+       "693759   Left Ventricular Hypertrophy   ACE^AGTR2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,8 +776,8 @@
     "                                columns='label', values='value',\n",
     "                                aggfunc=lambda x: '; '.join(x)).reset_index()\n",
     "diseases = diseases[['genesymbol', 'disease']]\n",
-    "diseases['diseases'] = diseases['disease'].str.split('; ')\n",
-    "diseases = diseases.explode('diseases')\n",
+    "diseases['disease'] = diseases['disease'].str.split('; ')\n",
+    "diseases = diseases.explode('disease')\n",
     "lr_diseases = li.rs.generate_lr_geneset(lr_pairs, diseases, source='disease', target='genesymbol', weight=None, lr_sep=\"^\")\n",
     "lr_diseases.sort_values(\"interaction\").head()"
    ]
@@ -779,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -808,17 +820,57 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>31124</th>\n",
+       "      <td>Acute Kidney Insufficiency</td>\n",
+       "      <td>SPP1^CD44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31159</th>\n",
+       "      <td>Acute kidney injury</td>\n",
+       "      <td>SPP1^CD44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32630</th>\n",
+       "      <td>Kidney Failure, Acute</td>\n",
+       "      <td>SPP1^CD44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33038</th>\n",
+       "      <td>Mammary Neoplasms, Experimental</td>\n",
+       "      <td>SPP1^CD44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33163</th>\n",
+       "      <td>Neoplasm Metastasis</td>\n",
+       "      <td>SPP1^CD44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>464305</th>\n",
+       "      <td>Cerebral Hemorrhage</td>\n",
+       "      <td>SPP1^ITGAV_ITGB3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1108109</th>\n",
+       "      <td>Mammary Neoplasms, Experimental</td>\n",
+       "      <td>SPP1^S1PR1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [disease, interaction]\n",
-       "Index: []"
+       "                                 disease       interaction\n",
+       "31124         Acute Kidney Insufficiency         SPP1^CD44\n",
+       "31159                Acute kidney injury         SPP1^CD44\n",
+       "32630              Kidney Failure, Acute         SPP1^CD44\n",
+       "33038    Mammary Neoplasms, Experimental         SPP1^CD44\n",
+       "33163                Neoplasm Metastasis         SPP1^CD44\n",
+       "464305               Cerebral Hemorrhage  SPP1^ITGAV_ITGB3\n",
+       "1108109  Mammary Neoplasms, Experimental        SPP1^S1PR1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1097,7 @@
        "4                                           18261457  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1196,7 @@
        "4  STAT5A    IL2       1  10022878;11435608;17182565;17911616;22854263;2..."
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1175,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1256,7 @@
        " 'Schizophrenia']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1301,7 +1353,7 @@
        "4   Dopamine  HMDB0000073  P21728        DRD1"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1394,6 @@
       "\n",
       "No Foreign Keys.\n",
       "----------------------------------------\n",
-      "\n",
       "Schema of table: proteins\n",
       "=========================\n",
       "Column ID: 0, Name: uniprot, Type: TEXT, Primary Key: 1\n",
@@ -1351,7 +1402,6 @@
       "\n",
       "No Foreign Keys.\n",
       "----------------------------------------\n",
-      "\n",
       "Schema of table: edges\n",
       "======================\n",
       "Column ID: 0, Name: hmdb, Type: TEXT, Primary Key: 1\n",
@@ -1366,7 +1416,6 @@
       "ID: 0, Seq: 0, Table: proteins, From: uniprot, To: uniprot\n",
       "ID: 1, Seq: 0, Table: metabolites, From: hmdb, To: hmdb\n",
       "----------------------------------------\n",
-      "\n",
       "Schema of table: source\n",
       "=======================\n",
       "Column ID: 0, Name: hmdb, Type: VARCHAR(255), Primary Key: 1\n",
@@ -1377,7 +1426,6 @@
       "ID: 0, Seq: 0, Table: edges, From: hmdb, To: hmdb\n",
       "ID: 0, Seq: 1, Table: edges, From: uniprot, To: uniprot\n",
       "----------------------------------------\n",
-      "\n",
       "Schema of table: cell_location\n",
       "==============================\n",
       "Column ID: 0, Name: hmdb, Type: TEXT, Primary Key: 1\n",
@@ -1386,7 +1434,6 @@
       "Foreign Keys:\n",
       "ID: 0, Seq: 0, Table: metabolites, From: hmdb, To: hmdb\n",
       "----------------------------------------\n",
-      "\n",
       "Schema of table: tissue_location\n",
       "================================\n",
       "Column ID: 0, Name: hmdb, Type: TEXT, Primary Key: 1\n",
@@ -1395,7 +1442,6 @@
       "Foreign Keys:\n",
       "ID: 0, Seq: 0, Table: metabolites, From: hmdb, To: hmdb\n",
       "----------------------------------------\n",
-      "\n",
       "Schema of table: biospecimen_location\n",
       "=====================================\n",
       "Column ID: 0, Name: hmdb, Type: TEXT, Primary Key: 1\n",
@@ -1404,7 +1450,6 @@
       "Foreign Keys:\n",
       "ID: 0, Seq: 0, Table: metabolites, From: hmdb, To: hmdb\n",
       "----------------------------------------\n",
-      "\n",
       "Schema of table: disease\n",
       "========================\n",
       "Column ID: 0, Name: hmdb, Type: TEXT, Primary Key: 1\n",
@@ -1413,7 +1458,6 @@
       "Foreign Keys:\n",
       "ID: 0, Seq: 0, Table: metabolites, From: hmdb, To: hmdb\n",
       "----------------------------------------\n",
-      "\n",
       "Schema of table: pathway\n",
       "========================\n",
       "Column ID: 0, Name: hmdb, Type: TEXT, Primary Key: 1\n",
